[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/scenes/staff/RobotArmController.gd" type="Script" id=1]
[ext_resource path="res://assets/world/robot_hand/base.png" type="Texture" id=2]
[ext_resource path="res://assets/world/robot_hand/part_1.png" type="Texture" id=3]
[ext_resource path="res://assets/world/robot_hand/part_2.png" type="Texture" id=4]
[ext_resource path="res://assets/world/robot_hand/part_3.png" type="Texture" id=5]
[ext_resource path="res://assets/world/robot_hand/welding.png" type="Texture" id=6]
[ext_resource path="res://assets/world/robot_hand/blood/bllood_part_2.png" type="Texture" id=7]
[ext_resource path="res://assets/world/robot_hand/blood/bllood_part_1.png" type="Texture" id=8]
[ext_resource path="res://assets/world/robot_hand/blood/bllood_part_0.png" type="Texture" id=9]
[ext_resource path="res://assets/world/robot_hand/blood/bllood_base.png" type="Texture" id=10]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 1, 0.835938, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1, 2, 1 )
flag_disable_z = true
spread = 1.0
gravity = Vector3( -500, 500, 0 )
angular_velocity = 7.33333
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 2.73717e+020
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.643137, 0.0509804, 0.0784314, 1 )

[sub_resource type="Animation" id=6]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 17.5, 0 ), Vector2( 17.5, 0 ), Vector2( 17.5, 5 ), Vector2( 17.5, 0 ), Vector2( 17.5, -5 ), Vector2( 17.5, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 17.5, 0 ), Vector2( 17.5, 0 ), Vector2( 17.5, 5 ), Vector2( 17.5, 0 ), Vector2( 17.5, -5 ), Vector2( 17.5, 0 ), Vector2( 17.5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/part:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -50.0, -40.0, -40.0, -50.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base/part/part:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -60.0, -50.0, -50.0, -60.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base/part/part/part:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -70.0, -60.0, -60.0, -70.0 ]
}

[sub_resource type="Animation" id=8]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Base/part:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -50.0, -75.0, -75.0, -50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/part/part:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -60.0, -65.0, -65.0, -60.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base/part/part/part:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -70.0, -40.0, -40.0, -70.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base/part/part/part/welding:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base/part/part/part/welding:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base/part/part/part/fire:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="RobotArm" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 17.5, 0 )
texture = ExtResource( 2 )

[node name="part" type="Sprite" parent="Base"]
show_behind_parent = true
position = Vector2( 11.4193, 12.086 )
rotation = -0.872665
texture = ExtResource( 3 )
offset = Vector2( 18.5, 0.5 )

[node name="part" type="Sprite" parent="Base/part"]
show_behind_parent = true
position = Vector2( 36, -1 )
rotation = -1.0472
texture = ExtResource( 4 )
offset = Vector2( 8.5, -2.5 )

[node name="part" type="Sprite" parent="Base/part/part"]
show_behind_parent = true
position = Vector2( 30, 0 )
rotation = -1.22173
texture = ExtResource( 5 )
offset = Vector2( 5.5, 0 )

[node name="welding" type="Particles2D" parent="Base/part/part/part"]
position = Vector2( 14, 0 )
emitting = false
amount = 15
lifetime = 0.3
preprocess = 0.1
process_material = SubResource( 3 )

[node name="fire" type="Sprite" parent="Base/part/part/part"]
visible = false
material = SubResource( 4 )
position = Vector2( 13, -0.5 )
texture = ExtResource( 6 )

[node name="blood" type="Sprite" parent="Base/part/part/part"]
visible = false
position = Vector2( 5, -0.5 )
texture = ExtResource( 7 )

[node name="RobotArm" type="Area2D" parent="Base/part/part/part"]
position = Vector2( 23.533, -44.3251 )
rotation = -3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base/part/part/part/RobotArm"]
polygon = PoolVector2Array( 25.8286, -47.42, 43.348, -2.23838, 35.0493, 1.14256, 17.8372, -47.42 )

[node name="blood" type="Sprite" parent="Base/part/part"]
visible = false
position = Vector2( 11.5, 0 )
texture = ExtResource( 8 )

[node name="blood" type="Sprite" parent="Base/part"]
visible = false
position = Vector2( 21, 3 )
texture = ExtResource( 9 )

[node name="blood" type="Sprite" parent="Base"]
visible = false
position = Vector2( 11, 7.5 )
texture = ExtResource( 10 )

[node name="Particles2D" type="Particles2D" parent="Base"]
position = Vector2( 12, 16 )
emitting = false
visibility_rect = Rect2( 0, 0, 0, 0 )
process_material = SubResource( 5 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 6 )
anims/idle_2 = SubResource( 7 )
anims/welding = SubResource( 8 )
[connection signal="area_entered" from="Base/part/part/part/RobotArm" to="." method="_on_RobotArm_area_entered"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
